--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "@bdougie/theweeknum",
   "version": "0.1.0",
   "description": "a package that tells you the week number",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest"
+    "start": "parcel",
+    "build": "parcel build"
   },
   "repository": {
     "type": "git",
