--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@bdougie/theweeknum",
   "version": "0.1.0",
   "description": "a package that tells you the week number",
-  "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build":"npx parcel build index.js"
   },
   "repository": {
     "type": "git",
