--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "jest",
     "start": "parcel index.js",
     "build": "parcel build index.js",
-    "lint": "npx standard --fix" // add this line
+    "lint": "npx standard --fix" 
   },
   "repository": {
     "type": "git",
